# test_parser

./: .gitignore  pyproject.toml
instloader/: config_reader.py  configs.py  instagram.py
tests/: test_config.json
tests/config_tests/: test_configs.py
tests/config_tests/configs/: creds.json  links_test.json
tests/instagram_api_tests/: test_instagram_login.py
